// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home failure GraphQL error 1`] = `
<div>
  <div>
    {"graphQLErrors":[{"message":"FetchUserWithGroupTopicsQuery: GraphQL error"}],"networkError":null,"message":"FetchUserWithGroupTopicsQuery: GraphQL error"}
  </div>
</div>
`;

exports[`Home failure network failure 1`] = `
<div>
  <div>
    {"graphQLErrors":[],"networkError":{},"message":"FetchUserWithGroupTopicsQuery: network error"}
  </div>
</div>
`;

exports[`Home loading 1`] = `
<div>
  <b>
    Loading...
  </b>
</div>
`;

exports[`Home success 1`] = `
<div>
  <div
    class="sc-bdvvaa cvCJhh"
  >
    <div>
      <h2>
        group1
      </h2>
      <ul>
        <li>
          t1-title
        </li>
        <li>
          t2-title
        </li>
      </ul>
    </div>
    <div>
      <h2>
        group2
      </h2>
      <ul>
        <li>
          t1-title
        </li>
        <li>
          t2-title
        </li>
      </ul>
    </div>
  </div>
</div>
`;
